force-app/main/default/objects/Integrante_caso__c/Integrante_caso__c.object-meta.xml
<CustomObject>
    <label>Integrante</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Nro. de Integrante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>