force-app/main/default/objects/Integrante_caso__c/fields/Aportes__c.field-meta.xml
<CustomField>
    <fullName>Aportes__c</fullName>
    <label>Aportes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>