force-app/main/default/objects/Integrante_caso__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nro de caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Integrantes</relationshipLabel>
    <relationshipName>Integrantes</relationshipName>
    <type>Lookup</type>
</CustomField>