force-app/main/default/objects/Integrante_caso__c/fields/Comentarios_Internos__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Internos__c</fullName>
    <label>Comentarios Internos</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>