force-app/main/default/objects/Integrante_caso__c/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <label>Correo electrónico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>