force-app/main/default/objects/Integrante_caso__c/fields/Cuenta_de_la_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_de_la_solicitud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta de la solicitud</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrantes (Cuenta de la solicitud)</relationshipLabel>
    <relationshipName>Integrantes_cuentasolicitud</relationshipName>
    <type>Lookup</type>
</CustomField>