force-app/main/default/objects/Integrante_caso__c/fields/Cuit_empleador__c.field-meta.xml
<CustomField>
    <fullName>Cuit_empleador__c</fullName>
    <label>Cuit empleador</label>
    <length>11</length>
    <type>Text</type>
</CustomField>