force-app/main/default/objects/Integrante_caso__c/fields/CUIT_Sin_guiones__c.field-meta.xml
<CustomField>
    <fullName>CUIT_Sin_guiones__c</fullName>
    <inlineHelpText>Sin guiones</inlineHelpText>
    <label>CUIT/CUIL (Sin guiones)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>