force-app/main/default/objects/Integrante_caso__c/fields/Empleador__c.field-meta.xml
<CustomField>
    <fullName>Empleador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrantes (Empleador)</relationshipLabel>
    <relationshipName>Empleador_integrante</relationshipName>
    <type>Lookup</type>
</CustomField>