force-app/main/default/objects/Integrante_caso__c/fields/Estado_civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_civil__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Casado</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Concubinato</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Divorciado</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Separado</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Soltero</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Viudo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>