force-app/main/default/objects/Integrante_caso__c/fields/Familiar__c.field-meta.xml
<CustomField>
    <fullName>Familiar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familiar</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Titular__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cuenta_de_la_solicitud__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrantes (Familiar)</relationshipLabel>
    <relationshipName>Integrantes_familiar</relationshipName>
    <type>Lookup</type>
</CustomField>