force-app/main/default/objects/Integrante_caso__c/fields/Fecha_de_vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vigencia__c</fullName>
    <label>Fecha de vigencia</label>
    <type>Date</type>
</CustomField>