force-app/main/default/objects/Integrante_caso__c/fields/Indicador_de_aporte__c.field-meta.xml
<CustomField>
    <fullName>Indicador_de_aporte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deriva aportes</label>
    <type>Checkbox</type>
</CustomField>