force-app/main/default/objects/Integrante_caso__c/fields/Integrante_accion_rapida__c.field-meta.xml
<CustomField>
    <fullName>Integrante_accion_rapida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrante acción rapida</label>
    <type>Checkbox</type>
</CustomField>