force-app/main/default/objects/Integrante_caso__c/fields/Integrante_de_reingreso__c.field-meta.xml
<CustomField>
    <fullName>Integrante_de_reingreso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Buscar por DNI</inlineHelpText>
    <label>Integrante de reingreso</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrantes</relationshipLabel>
    <relationshipName>Integrantes_cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>