force-app/main/default/objects/Integrante_caso__c/fields/Integrante_tipo_asociado__c.field-meta.xml
<CustomField>
    <fullName>Integrante_tipo_asociado__c</fullName>
    <label>Integrante tipo asociado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntario</fullName>
            </value>
            <value>
                <fullName>Relación de Dependencia</fullName>
            </value>
            <value>
                <fullName>Monotributista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>