force-app/main/default/objects/Integrante_caso__c/fields/Modificado_en_SS_por__c.field-meta.xml
<CustomField>
    <fullName>Modificado_en_SS_por__c</fullName>
    <label>Modificado en SS por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>