force-app/main/default/objects/Integrante_caso__c/fields/Motivo_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_baja__c</fullName>
    <label>Motivo de baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>BAJA POR PROBLEMAS ECONÓMICOS</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>BAJA POR DESVINCULACIÓN LABORAL/BAJA APORTE OS MONOTRIBUTO</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>BAJA POR MOTIVOS PERSONALES</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>BAJA POR DISCONFORMIDAD</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>BAJA POR CAMBIO DE COBERTURA</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>BAJA POR PEDIDO DE EMPRESA</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>BAJA POR FALLECIMIENTO</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>BENEFICIO POR VIAJE AL EXTERIOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>