force-app/main/default/objects/Integrante_caso__c/fields/Nro_de_asociado__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_asociado__c</fullName>
    <label>Nro. de asociado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>