force-app/main/default/objects/Integrante_caso__c/fields/Numero_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_solicitud__c</fullName>
    <label>Numero de solicitud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>