force-app/main/default/objects/Integrante_caso__c/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <label>Razón Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>