force-app/main/default/objects/Integrante_caso__c/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Masculino</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Femenino</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>