force-app/main/default/objects/Integrante_caso__c/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
                <label>No Determinado</label>
            </value>
            <value>
                <fullName>PAS</fullName>
                <label>Pasaporte</label>
            </value>
            <value>
                <fullName>LC</fullName>
                <label>Libreta Cívica</label>
            </value>
            <value>
                <fullName>LE</fullName>
                <label>Libreta de Enrolamiento</label>
            </value>
            <value>
                <fullName>CI</fullName>
                <label>Cédula de Identidad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>