force-app/main/default/objects/Integrante_caso__c/recordTypes/Bajas.recordType-meta.xml
<RecordType>
    <fullName>Bajas</fullName>
    <active>true</active>
    <label>Bajas</label>
</RecordType>