force-app/main/default/objects/Integrante_caso__c/recordTypes/Despegues.recordType-meta.xml
<RecordType>
    <fullName>Despegues</fullName>
    <active>true</active>
    <label>Despegues</label>
</RecordType>