force-app/main/default/objects/Integrante_caso__c/validationRules/Caso_padre_en_SS.validationRule-meta.xml
<ValidationRule>
    <fullName>Caso_padre_en_SS</fullName>
    <active>true</active>
    <description>Una vez que se envía a SS el caso padre, no se podrán agregar más integrantes relacionados.</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Bajas&quot;,
ISNEW(),
NOT(ISBLANK(Caso__r.Nro_de_solicitud_SS__c ))
)</errorConditionFormula>
    <errorMessage>No se permite agregar integrantes a un caso ya registrado en Salud Soft</errorMessage>
</ValidationRule>