force-app/main/default/objects/Integrante_caso__c/validationRules/IDN_fecha_nacimiento_mayor_hoy.validationRule-meta.xml
<ValidationRule>
    <fullName>IDN_fecha_nacimiento_mayor_hoy</fullName>
    <active>true</active>
    <errorConditionFormula>Fecha_de_Nacimiento__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>No debera crear un integrante con una fecha de nacimiento superior al dia actual</errorMessage>
</ValidationRule>