force-app/main/default/objects/Integrante_caso__c/validationRules/IND_Reingreso_Familiar.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Reingreso_Familiar</fullName>
    <active>true</active>
    <description>Si el código de asociado no es el mismo que el del titular no se permitirá crearlor</description>
    <errorConditionFormula>AND( Integrante_de_reingreso__r.Titular_codigo__c =  Caso__r.Account.Codigo_de_Afiliado__c,
				 Integrante_accion_rapida__c)</errorConditionFormula>
    <errorMessage>No se pueden agregar personas que no pertenezcan al grupo familiar</errorMessage>
</ValidationRule>