force-app/main/default/objects/Integrante_caso__c/validationRules/Obligatorio_razon_social.validationRule-meta.xml
<ValidationRule>
    <fullName>Obligatorio_razon_social</fullName>
    <active>true</active>
    <description>Validacion para que la Cuit empleador y razon social sea obligatorio cuando el campo Empleador este vacion</description>
    <errorConditionFormula>AND(
				 RecordType.DeveloperName =&quot;Despegues&quot;,
				OR(
							 ISPICKVAL(Caso__r.Segmento_de_grupo_familiar__c,&quot;OBLDIR&quot;),
								ISPICKVAL(Caso__r.Segmento_de_grupo_familiar__c,&quot;OBLEMP&quot;)
								),
				 ISBLANK(Empleador__c), 
				OR(
							ISBLANK(Cuit_empleador__c),
							ISBLANK(Razon_Social__c)
								)
				)</errorConditionFormula>
    <errorMessage>Los campos &quot;Razón Social&quot; y &quot;Cuit empleador&quot; son obligatorios cuando el campo &quot;Empleador&quot; esta vacío</errorMessage>
</ValidationRule>